# emp-sh2pc

./: CMakeLists.txt
emp-sh2pc/: semihonest.h  semihonest_eva.h  semihonest_gen.h
test/: bit.cpp  circuit_file.cpp  example.cpp  float.cpp  int.cpp
